--- a/style.css
+++ b/style.css
@@ -1,1 +1,47 @@
-@charset UTF-8
+@charset "UTF-8";
+
+* {
+    margin: 0px;
+    padding: 0px;
+}
+
+html, body{
+    height: 100vh;
+    width: 100vw;
+    background-color: black;
+}
+
+body{
+    background-image: url('imagens/fundo-madeira.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+}
+
+main{
+    position: relative;
+    height: 100vh;
+}
+
+section#cel{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    height: 630px;
+    width: 310px;
+    background-image: url('imagens/frame-iphone.png');
+    background-repeat: no-repeat;
+}
+
+section#rs{
+
+}
+
+iframe#tela{
+    position: relative;
+    top: 60px;
+    left: 20px;
+    width: 269px;
+    height: 500px;
+}
