--- a/style.css
+++ b/style.css
@@ -45,3 +45,25 @@ iframe#tela{
     width: 269px;
     height: 500px;
 }
+
+section#rs{
+    text-align: right;
+    transform: translate(-30px, 130px);
+    /* altera a posiçaõ do objeto */
+}
+
+section#rs img{
+    width: 50px;
+    margin: 10px;
+    border-radius: 50px;
+    box-shadow: 2px 2px rgba(0, 0, 0, 0.178);
+    box-sizing: border-box;
+    /* o box-sizing faz a borda "fazer parte" da imagem/conteudo */
+}
+
+section#rs img:hover{
+    border: 2px solid white;
+    transform: translate(-4px, -4px);
+    transition: transform 0.4s, border 0.4s;
+    /* o transition cria transições para os comandos criados*/
+}
